# email-servers

./: CMakeLists.txt  Makefile  Marking-scheme.txt  client_initiation.c  client_initiation.h  mail_transaction.c  mail_transaction.h  mailuser.c  mailuser.h  message_contents.c  message_contents.h  mypopd.c  mysmtpd.c  netbuffer.c  netbuffer.h  receipt_specification.c  receipt_specification.h  server.c  server.h  session_initiation.c  session_initiation.h  transaction_state.c  transaction_state.h  update_state.c  update_state.h
pop3/: mypopd.c  transaction_state.c  update_state.c
smtp/: client_initiation.c  mail_transaction.c  message_contents.c  message_contents.h  receipt_specification.c  receipt_specification.h  session_initiation.c
